--- a/love_counter_site.html
+++ b/love_counter_site.html
@@ -5,80 +5,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Для тебя 💖</title>
 <style>
-    body {
-        margin:0;
-        padding:0;
-        background-color:#d0f0c0;
-        font-family: Arial, sans-serif;
-        display:flex;
-        justify-content:center;
-        align-items:center;
-        height:100vh;
-        text-align:center;
-    }
-    .container {
-        background:white;
-        padding:40px;
-        border-radius:20px;
-        box-shadow:0 4px 15px rgba(0,0,0,0.2);
-        max-width:90%;
-    }
-    h1 {
-        color:#e91e63;
-        margin-bottom:20px;
-        font-size:2em;
-    }
-    p {
-        font-size:1.5em;
-        color:#333;
-    }
-    .heart {
-        color:red;
-        font-size:2em;
-        animation:beat 1s infinite;
-    }
-    @keyframes beat {
-        0%,100%{transform:scale(1);}
-        50%{transform:scale(1.3);}
-    }
+body{margin:0;padding:0;background:#d0f0c0;font-family:Arial,sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;text-align:center;}
+.container{background:white;padding:40px;border-radius:20px;box-shadow:0 4px 15px rgba(0,0,0,0.2);max-width:90%;}
+h1{color:#e91e63;margin-bottom:20px;font-size:2em;}
+p{font-size:1.5em;color:#333;}
+.heart{color:red;font-size:2em;animation:beat 1s infinite;}
+@keyframes beat{0%,100%{transform:scale(1);}50%{transform:scale(1.3);}}
 </style>
 </head>
 <body>
 <div class="container">
-    <h1>💖 Счётчик нашей любви 💖</h1>
-    <p>Мы вместе уже <span id="daysTogether">0</span> дней! <span class="heart">❤️</span></p>
-    <p id="compliment">Привет, сегодня ты самая...</p>
+<h1>💖 Счётчик нашей любви 💖</h1>
+<p>Мы вместе уже <span id="daysTogether">0</span> дней! <span class="heart">❤️</span></p>
+<p id="compliment">Привет, сегодня ты самая...</p>
 </div>
-
 <script>
-const startDate = new Date('2025-08-22');
-
-const compliments = [
-"милая и удивительная","неповторимая и нежная","самая красивая на свете",
-"волшебная и счастливая","самая нежная и добрая","яркая и сияющая",
-"самая лучшая в мире","неотразимая и очаровательная","самая нежная и ласковая",
-"самая обаятельная и привлекательная","самая удивительная и неповторимая",
-"сияющая и вдохновляющая","самая красивая и добрая","самая замечательная и милая",
-"самая нежная и прекрасная","самая чарующая и любимая","самая солнечная и счастливая",
-"самая особенная и любимая","самая прекрасная и неповторимая","самая очаровательная и чудесная",
-"самая любимая и родная","самая милая и вдохновляющая","самая красивая и сияющая",
-"самая добрая и нежная","самая чудесная и неповторимая","самая любимая и прекрасная",
-"самая очаровательная и волшебная","самая яркая и солнечная","самая удивительная и дорогая",
-"самая нежная и родная"
-];
-
-function updateDaysTogether(){
-    const today = new Date();
-    const diffTime = today - startDate;
-    const diffDays = Math.floor(diffTime / (1000*60*60*24));
-    document.getElementById('daysTogether').textContent = diffDays;
-    const compliment = compliments[diffDays % compliments.length];
-    document.getElementById('compliment').textContent = `Привет, сегодня ты самая ${compliment}!`;
-}
-
-// Инициализация
-updateDaysTogether();
-setInterval(updateDaysTogether,1000*60*60); // обновляем каждый час
+const startDate=new Date('2025-08-22');
+const compliments=["милая и удивительная","неповторимая и нежная","самая красивая на свете","волшебная и счастливая","самая нежная и добрая","яркая и сияющая","самая лучшая в мире","неотразимая и очаровательная","самая нежная и ласковая","самая обаятельная и привлекательная","самая удивительная и неповторимая","сияющая и вдохновляющая","самая красивая и добрая","самая замечательная и милая","самая нежная и прекрасная","самая чарующая и любимая","самая солнечная и счастливая","самая особенная и любимая","самая прекрасная и неповторимая","самая очаровательная и чудесная","самая любимая и родная","самая милая и вдохновляющая","самая красивая и сияющая","самая добрая и нежная","самая чудесная и неповторимая","самая любимая и прекрасная","самая очаровательная и волшебная","самая яркая и солнечная","самая удивительная и дорогая","самая нежная и родная"];
+function updateDaysTogether(){const today=new Date();const diffTime=today-startDate;const diffDays=Math.floor(diffTime/(1000*60*60*24));document.getElementById('daysTogether').textContent=diffDays;document.getElementById('compliment').textContent=`Привет, сегодня ты самая ${compliments[diffDays%compliments.length]}!`;}
+updateDaysTogether();setInterval(updateDaysTogether,1000*60*60);
 </script>
 </body>
 </html>
